@@ -5,6 +5,9 @@ Changelog
 2.4.2 (unreleased)
 ------------------
 
+- Keep tuple / set types when sending data.
+  [jone]
+
 - Support dexterity relations.
   [jone]
 
